<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:id="@+id/mGenerateButtonBottomSheet"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_code_black_24dp"
            android:layout_marginEnd="16dp"
            android:tint="#212121" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mStringGenerate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:id="@+id/mCopyButtonBottomSheet"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_create_black_24dp"
            android:layout_marginEnd="16dp"
            android:tint="#212121" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mStringCopy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:id="@+id/mDeleteButtonBottomSheet"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            android:layout_marginEnd="16dp"
            android:tint="#212121" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mStringDelete" />
    </LinearLayout>

</LinearLayout>